# LaneDetection

./: .travis.yml  .~lock.ProductBacklog.xlsx#  CMakeLists.txt  LICENSE.txt  cmake_errors.txt  readme.md
app/: CMakeLists.txt  Cleaner.cpp  Files.cpp  LanesMarker.cpp  RegionMaker.cpp  Thresholder.cpp  main.cpp
cppcheck and cpplint results/: cppcheck_results.txt  cpplint_results.txt
doxygen/: doxygenSettings.conf
doxygen/html/: Cleaner_8hpp_source.html  Files_8hpp_source.html  LanesMarker_8hpp_source.html  RegionMaker_8hpp_source.html  Thresholder_8hpp_source.html  annotated.html  classCleaner-members.html  classCleaner.html  classFiles-members.html  classFiles.html  classLanesMarker-members.html  classLanesMarker.html  classRegionMaker-members.html  classRegionMaker.html  classThresholder-members.html  classThresholder.html  classes.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_d422163b96683743ed3963d4aac17747.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  graph_legend.html  index.html
doxygen/html/search/: all_0.js  all_2.js  all_3.js  all_5.js  classes_1.js  classes_3.js  functions_0.js  searchdata.js
doxygen/latex/: annotated.tex  classCleaner.tex  classFiles.tex  classLanesMarker.tex  classRegionMaker.tex  classThresholder.tex  dir_13e138d54eb8818da29c3992edef070a.tex  dir_d422163b96683743ed3963d4aac17747.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  refman.tex
include/: Cleaner.hpp  Files.hpp  LanesMarker.hpp  RegionMaker.hpp  ThreshInheritClean.hpp  Thresholder.hpp
test/: CMakeLists.txt  main.cpp  test.cpp
